--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,14 +35,13 @@ set -sg escape-time 10
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'Alexis12119/tmux-mono'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-set -g @catppuccin_flavour 'mocha'
 # set -g @resurrect-capture-pane-contents 'on'
 # set -g @continuum-restore 'on'
 
