--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      JetBrainsMono Nerd Font
+font_family      JetBrains Mono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -6,7 +6,7 @@ bold_italic_font auto
 font_size 9.0
 # window_padding_width 25
 include theme.conf
-background_opacity 1.00
+#background_opacity 0.60
 #hide_window_decorations yes
 #confirm_os_window_close 0
 modify_font cell_height 150%
