--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,26 +35,11 @@ set -sg escape-time 10
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'Alexis12119/tmux-mono'
-set -g @plugin 'catppuccin/tmux' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'Alexis12119/tmux-mono'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
-
-# Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
-
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
