--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# set tmux bar at the top
+set-option -g status-position top
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
