--- a/kitty/.config/kitty/userprefs.conf
+++ b/kitty/.config/kitty/userprefs.conf
@@ -4,7 +4,7 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 9.0
-# window_padding_width 25
+window_padding_width 0
 include theme.conf
 #background_opacity 0.60
 #hide_window_decorations yes
