--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,12 +1,47 @@
+# Font
 font_family      JetBrains Mono Nerd Font
+font_size 11.0
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 9.0
+background_opacity 0.8
 window_padding_width 0
 # include theme.conf
 #background_opacity 0.60
 #hide_window_decorations yes
 #confirm_os_window_close 0
 modify_font cell_height 150%
+
+# Cursor
+cursor_shape beam
+cursor_trail 1
+
+# Padding (why weird value? consistency with foot)
+# window_margin_width 21.75
+
+# No stupid close confirmation
+confirm_os_window_close 0
+
+# Use fish shell
+shell fish
+
+# Copy
+map ctrl+c    copy_or_interrupt
+
+# Search
+map ctrl+f   launch --location=hsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
+map kitty_mod+f   launch --location=hsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
+
+# Scroll & Zoom
+map page_up    scroll_page_up
+map page_down    scroll_page_down
+
+map ctrl+plus  change_font_size all +1
+map ctrl+equal  change_font_size all +1
+map ctrl+kp_add  change_font_size all +1
+map ctrl+minus       change_font_size all -1
+map ctrl+underscore       change_font_size all -1
+map ctrl+kp_subtract       change_font_size all -1
+map ctrl+0 change_font_size all 0
+map ctrl+kp_0 change_font_size all 0
