--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -54,6 +54,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+set -g @resurrect-processes 'lazygit lazydocker'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
