feat(tmux): make the status bar minimal

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,20 +41,28 @@ set -sg escape-time 10
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'Alexis12119/tmux-mono'
-
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @continuum-restore 'on'
 set -g @resurrect-processes 'lazygit lazydocker'
+
+# Status bar configuration
+set -g status-bg "#161b22"
+set -g status-fg "#c9d1d9"
+set -g window-status-format '#[fg=#c9d1d9] #I:#W '
+set -g window-status-current-format '#[fg=#58a6ff] ○ #I:#W '
+set -g status-left '#[fg=#ffdf5d]  #S '
+set -g status-right '#[fg=green]CPU:#{cpu} #[fg=yellow]MEM:#{mem}'
+set -g pane-border-style fg="#313641"
+set -g pane-active-border-style fg="#58a6ff"
+set -g status-interval 5
+set -g status-justify left
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
