--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,10 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
+# Set window titles to show current directory instead of executable
+set -g automatic-rename on
+set -g automatic-rename-format '#{b:pane_current_path}'
+
 set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
@@ -48,8 +52,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 set -g @resurrect-processes 'lazygit lazydocker'
 
 # Status bar configuration
@@ -57,12 +61,12 @@ set -g status-bg "#161b22"
 set -g status-fg "#c9d1d9"
 set -g window-status-format '#[fg=#c9d1d9] #I:#W '
 set -g window-status-current-format '#[fg=#58a6ff] ○ #I:#W '
-set -g status-left '#[fg=#ffdf5d]  #S '
+set -g status-left '#[fg=#ffdf5d]  #{=15:session_name} '
 set -g status-right '#[fg=green]CPU:#{cpu} #[fg=yellow]MEM:#{mem}'
 set -g pane-border-style fg="#313641"
 set -g pane-active-border-style fg="#58a6ff"
 set -g status-interval 5
-set -g status-justify left
+set -g status-justify centre
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
