--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,12 +61,13 @@ set -g status-bg "#161b22"
 set -g status-fg "#c9d1d9"
 set -g window-status-format '#[fg=#c9d1d9] #I:#W '
 set -g window-status-current-format '#[fg=#58a6ff] ○ #I:#W '
-set -g status-left '#[fg=#ffdf5d]  #{=15:session_name} '
+set -g status-left '#[fg=#ffdf5d]  #{=50:session_name} '
 set -g status-right '#[fg=green]CPU:#{cpu} #[fg=yellow]MEM:#{mem}'
 set -g pane-border-style fg="#313641"
 set -g pane-active-border-style fg="#58a6ff"
 set -g status-interval 5
 set -g status-justify centre
+set -g status-left-length 50
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
