--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
 setw -g pane-base-index 1
 
+bind-key "f" run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/session.sh attach"
+
 # set tmux bar at the top
 set-option -g status-position top
 
@@ -54,7 +56,7 @@ set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-set -g @resurrect-processes 'lazygit lazydocker'
+set -g @resurrect-processes 'lazygit lazydocker opencode'
 
 # Status bar configuration
 set -g status-bg "#161b22"
