--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,7 +56,7 @@ set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-set -g @resurrect-processes 'lazygit lazydocker opencode'
+set -g @resurrect-processes 'lazygit lazydocker opencode nvim'
 
 # Status bar configuration
 set -g status-bg "#161b22"
@@ -70,6 +70,7 @@ set -g pane-active-border-style fg="#58a6ff"
 set -g status-interval 5
 set -g status-justify centre
 set -g status-left-length 50
+set -g message-style fg="#c9d1d9",bg="#161b22"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
