--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@ setw -g pane-base-index 1
 # set tmux bar at the top
 set-option -g status-position top
 
+set -g focus-events on
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
@@ -54,7 +56,7 @@ set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
-set -g @resurrect-processes 'lazygit lazydocker opencode nvim'
+set -g @resurrect-processes 'lazygit lazydocker lazysql opencode nvim'
 
 # Status bar configuration
 set -g status-bg "#161b22"
