--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -62,8 +62,8 @@ set -g @resurrect-processes 'lazygit lazydocker lazysql opencode nvim'
 set -g status-bg "#161b22"
 set -g status-fg "#c9d1d9"
 set -g window-status-format '#[fg=#c9d1d9] #I:#W '
-set -g window-status-current-format '#[fg=#58a6ff] ○ #I:#W '
-set -g status-left '#[fg=#ffdf5d]  #{=50:session_name} '
+set -g window-status-current-format '#[fg=#58a6ff] 󰻃 #I:#W '
+set -g status-left '#[fg=#ffdf5d]  #{=50:session_name}'
 set -g status-right '#[fg=green]CPU:#{cpu} #[fg=yellow]MEM:#{mem}'
 set -g pane-border-style fg="#313641"
 set -g pane-active-border-style fg="#58a6ff"
