--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,8 +59,8 @@ set -g @continuum-restore 'on'
 set -g @resurrect-processes 'lazygit lazydocker lazysql opencode nvim'
 
 # Status bar configuration
-set -g status-bg "#161b22"
-set -g status-fg "#c9d1d9"
+set -g status-bg "#24292f"
+set -g status-fg "#adbac7"
 set -g window-status-format '#[fg=#c9d1d9] #I:#W '
 set -g window-status-current-format '#[fg=#58a6ff] 󰻃 #I:#W '
 set -g status-left '#[fg=#ffdf5d]  #{=50:session_name}'
