--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,7 +70,7 @@ set -g pane-active-border-style fg="#58a6ff"
 set -g status-interval 5
 set -g status-justify centre
 set -g status-left-length 50
-set -g message-style fg="#c9d1d9",bg="#161b22"
+set -g message-style fg="#adbac7",bg="#24292f"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
